<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pubTitle="http://schemas.android.com/apk/res/com.ciapc.anxin"
    android:id="@+id/perfect_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C5"
    android:orientation="vertical" >

    <com.ciapc.anxin.common.view.PubTitle
        android:id="@+id/perfect_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        pubTitle:leftIcon="@drawable/back"
        pubTitle:rightText="@string/save"
        pubTitle:text="完善个人信息" />

    <com.ciapc.anxin.common.view.RoundView
        android:id="@+id/perfect_head"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/toux_default" />

    <TextView
        android:id="@+id/perfect_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/left_right"
        android:gravity="center"
        android:textColor="@color/C2"
        android:textSize="@dimen/H3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/left_right"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/perfect_realname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/exchange_bg_top_bottom"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/C2"
                android:textSize="@dimen/H4" />

            <TextView
                android:id="@+id/person_input_truename"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical|right"
                android:hint="@string/name_hint"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrows" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/perfect_namecard"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/exchange_bg_bottom"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/name_card"
                android:textColor="@color/C2"
                android:textSize="@dimen/H4" />

            <TextView
                android:id="@+id/person_name_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:ellipsize="end"
                android:gravity="center_vertical|right"
                android:hint="@string/name_card_hint"
                android:singleLine="true"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrows" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/perfect_for_company"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/exchange_bg_bottom"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/company"
                android:textColor="@color/C2"
                android:textSize="@dimen/H4" />

            <TextView
                android:id="@+id/perfect_company"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:ellipsize="end"
                android:gravity="center_vertical|right"
                android:hint="@string/company_hint"
                android:singleLine="true"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrows" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/perfect_job"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/exchange_bg_bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/job_flag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/job_name"
                android:textColor="@color/C2"
                android:textSize="@dimen/H4" />

            <TextView
                android:id="@+id/person_input_job"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:ellipsize="end"
                android:gravity="center_vertical|right"
                android:hint="@string/job_name_hint"
                android:singleLine="true"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrows" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/perfect_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/exchange_bg_bottom"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/input_email"
                android:textColor="@color/C2"
                android:textSize="@dimen/H4" />

            <TextView
                android:id="@+id/person_input_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:ellipsize="end"
                android:gravity="center_vertical|right"
                android:hint="@string/input_email_hint"
                android:singleLine="true"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/arrows" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>