<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pubTitle="http://schemas.android.com/apk/res/com.ciapc.anxin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.ciapc.anxin.common.view.PubTitle
        android:id="@+id/share_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        pubTitle:leftIcon="@drawable/back"
        pubTitle:text="分享有礼" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="@null" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:scaleType="center"
                android:src="@drawable/share_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/share_code"
                android:textColor="@color/C3"
                android:textSize="@dimen/H2" />

            <TextView
                android:id="@+id/share_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_code"
                android:textColor="@color/C9"
                android:textSize="@dimen/H2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/share_code_content"
                android:textColor="@color/C1"
                android:textSize="@dimen/H4" />

            <Button
                android:id="@+id/share_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/C9"
                android:text="@string/share_code_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/H3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/share_code_address"
                    android:textColor="@color/C2"
                    android:textSize="@dimen/H5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/share_code_address_content"
                    android:textColor="@color/C7"
                    android:textSize="@dimen/H5" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>