<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pubTitle="http://schemas.android.com/apk/res/com.ciapc.anxin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C5"
    android:orientation="vertical" >

    <com.ciapc.anxin.common.view.PubTitle
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        pubTitle:rightText="@string/register"
        pubTitle:text="登录" />

    <LinearLayout
        android:id="@+id/login_input_pwd_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_input_pwd_style"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp" >

            <ImageView
                android:id="@+id/login_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/login_phone" />

            <com.ciapc.anxin.common.view.CustomEditText
                android:id="@+id/login_input_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@null"
                android:gravity="left|center_vertical"
                 android:drawableRight="@drawable/clear_input"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="11"
                android:padding="5dp"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />

            <requestFocus />
        </LinearLayout>

        <View
            android:id="@+id/login_line"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/C3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp" >

            <ImageView
                android:id="@+id/login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/login_pwd" />

            <com.ciapc.anxin.common.view.CustomEditText
                android:id="@+id/login_input_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@null"
                android:drawableRight="@drawable/clear_input"
                android:gravity="left|center_vertical"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="5dp"
                android:textColor="@color/C1"
                android:textColorHint="@color/C3"
                android:textSize="@dimen/H4" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/to_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="16dp"
        android:text="@string/forget"
        android:textColor="@color/C7"
        android:textSize="@dimen/H3" />

    <Button
        android:id="@+id/to_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_register_btn_style"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/C6"
        android:textSize="@dimen/H3" />

</LinearLayout>